--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_bytes = "0.11.12"
 serde_repr = "0.1.14"
 pasta_curves = { workspace = true, features = ["repr-c", "serde"] }
+halo2curves = { version = "0.6.0", features = ["bits", "derive_serde"] }
 arecibo = {git = "https://github.com/lurk-lab/arecibo.git", branch = "cache-witness" }
 itertools = "0.12.1"
 rand_core = "0.6.4"
@@ -20,7 +21,9 @@ tracing = "0.1.40"
 abomonation = "0.7.3"
 abomonation_derive = { version = "0.1.0", package = "abomonation_derive_ng" }
 ff = { version = "0.13.0", features = ["derive"] }
-ref-cast = "1.0.20" # allocation-less conversion in multilinear polys
+ref-cast = "1.0.20"
+once_cell = "1.19.0" # allocation-less conversion in multilinear polys
+camino = "1.1.6"
 
 [workspace]
 resolver = "2"
@@ -34,7 +37,7 @@ pasta_curves = { workspace = true, features = ["repr-c", "serde"] }
 cc = { version = "^1.0.70", features = ["parallel"] } #grumpkin version
 
 [features]
-msm_primitive_test = []
+primitive_test = []
 
 [[test]]
 name = "test_CUDA"
